# GeodesicPath

./: CMakeLists.txt  Geodesic.cpp  Geodesic.h  MathUtils.cpp  MathUtils.h  main.cpp
test/: CMakeLists.txt  GeodesicTest.cpp  empty.cpp
